apps/keda/manifests/Service-keda-admission-webhooks.yml
---
# Source: keda/templates/webhooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keda-admission-webhooks
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/instance: keda
  name: keda-admission-webhooks
  namespace: keda
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 9443
      appProtocol: https
  selector:
    app: keda-admission-webhooks
