apps/keda/manifests/Service-keda-operator-metrics-apiserver.yml
---
# Source: keda/templates/metrics-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keda-operator-metrics-apiserver
    app: keda-operator-metrics-apiserver
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/instance: keda
  name: keda-operator-metrics-apiserver
  namespace: keda
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 6443
      protocol: TCP
      appProtocol: https
    - name: metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: keda-operator-metrics-apiserver
